[gd_scene load_steps=13 format=3 uid="uid://chxabingjikr6"]

[ext_resource type="Script" uid="uid://dnsm2qjmkir2q" path="res://scenes/gameplay/hud/psych_hud.gd" id="1_fpm36"]
[ext_resource type="StyleBox" uid="uid://bb871j4np30b4" path="res://scenes/gameplay/hud/styleboxes/health_bar_left.tres" id="2_lbgla"]
[ext_resource type="StyleBox" uid="uid://bdag5e631yhvt" path="res://scenes/gameplay/hud/styleboxes/health_bar_right.tres" id="3_x3eqx"]
[ext_resource type="Texture2D" uid="uid://d3x8spahvh1je" path="res://assets/game/characters/face/icon.png" id="4_lal55"]
[ext_resource type="FontFile" uid="uid://ddfumfkyfy17s" path="res://assets/ui/fonts/vcr.ttf" id="5_wtbdw"]
[ext_resource type="Script" uid="uid://dxoh2eni26dvh" path="res://scenes/gameplay/hud/combo_group.gd" id="6_a4fgs"]
[ext_resource type="AudioStream" uid="uid://cs4y7h8cnhhwm" path="res://assets/sounds/countdown/funkin/3.ogg" id="8_6nv5g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_it28e"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_fpm36"]
font = ExtResource("5_wtbdw")
font_size = 20
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7n24"]
bg_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpm36"]
bg_color = Color(1, 1, 1, 1)
anti_aliasing = false

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_q7n24"]

[node name="psych_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpm36")

[node name="health_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -295.5
offset_top = -68.0
offset_right = 294.5
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = ExtResource("2_lbgla")
theme_override_styles/fill = ExtResource("3_x3eqx")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="panel" type="Panel" parent="health_bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.007
anchor_top = -0.3
anchor_right = 1.005
anchor_bottom = 1.3
offset_left = -0.87
offset_top = -2.0
offset_right = 3.04999
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_it28e")

[node name="icon_p1" type="Sprite2D" parent="health_bar"]
position = Vector2(300, 0)
texture = ExtResource("4_lal55")
offset = Vector2(30, 0)
flip_h = true
hframes = 2

[node name="icon_p2" type="Sprite2D" parent="health_bar"]
position = Vector2(300, 0)
texture = ExtResource("4_lal55")
offset = Vector2(-35, 0)
hframes = 2

[node name="score_text" type="Label" parent="health_bar"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = 20.0
offset_right = 223.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(223, 12)
text = "Score: 0 | Combo Breaks: 0 | Rating: ?"
label_settings = SubResource("LabelSettings_fpm36")
horizontal_alignment = 1
vertical_alignment = 1

[node name="time_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 19.0
offset_right = 200.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_q7n24")
theme_override_styles/fill = SubResource("StyleBoxFlat_fpm36")
value = 50.0
show_percentage = false

[node name="panel" type="Panel" parent="time_bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.007
anchor_top = -0.3
anchor_right = 1.005
anchor_bottom = 1.3
offset_left = -0.87
offset_top = -2.0
offset_right = 3.04999
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_it28e")

[node name="time_text" type="Label" parent="time_bar"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(223, 12)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_wtbdw")
theme_override_font_sizes/font_size = 32
text = "0:00"
horizontal_alignment = 1

[node name="combo_group" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("6_a4fgs")

[node name="judgement" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit0" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit1" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit2" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit3" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="countdown" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="sprite" type="Sprite2D" parent="countdown"]
visible = false
position = Vector2(640, 360)
scale = Vector2(0.7, 0.7)
texture = SubResource("PlaceholderTexture2D_q7n24")

[node name="sound" type="AudioStreamPlayer" parent="countdown"]
stream = ExtResource("8_6nv5g")
max_polyphony = 5

[node name="timer" type="Timer" parent="countdown"]
one_shot = true
